--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ include_trailing_comma = true
 use_parentheses = true
 ensure_newline_before_comments = true
 known_first_party = ["projectx_sdk"]
+known_base = ["projectx_sdk.models.base"]
+sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "BASE", "LOCALFOLDER"]
 skip_glob = ["*/build/*", "*/dist/*", "*/venv/*"]
 
 [tool.mypy]
@@ -41,6 +43,10 @@ disallow_untyped_decorators = true
 no_implicit_optional = true
 strict_optional = true
 
+# Ignore syntax issues in 3rd party packages
+ignore_errors = false
+
 [[tool.mypy.overrides]]
-module = ["signalrcore.*", "pytest.*", "responses.*"]
+module = ["signalrcore.*", "pytest.*", "responses.*", "pydantic.*"]
 ignore_missing_imports = true
+ignore_errors = true
